# vn-numberwords

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISH.md  README.md  number2word.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
scripts/: build_and_test.py
tests/: test_basic.py  test_decimal.py  test_words_to_number.py
vn_numberwords/: __init__.py  api.py  cli.py  exceptions.py
vn_numberwords/api/: __init__.py  public.py
vn_numberwords/core/: __init__.py  interfaces.py  transformer.py  utils.py  word_parser.py
vn_numberwords/dictionaries/: __init__.py  base.py  south.py
