[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-numberwords"
version = "0.2.0"
description = "Convert numbers to Vietnamese words and Vietnamese words to numbers (with North/South variants)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Nguyen Huu Vuong" }
]
keywords = ["vietnamese", "number to words", "numberwords", "currency", "locale"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/rato-kaz/vn-numberwords"
Repository = "https://github.com/rato-kaz/vn-numberwords"

[tool.setuptools.packages.find]
where = ["."]
include = ["vn_numberwords*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pre-commit>=3.5",
  "mypy>=1.10",
  "ruff>=0.6",
]

[project.scripts]
vn-numberwords = "vn_numberwords.cli:main"


